Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,9 +267,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "names_and_ranks = []\n",
     "for index in city_indices: \n",
-    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
+    "    names_and_ranks.append(f\"{ {city_names[index]}\")\n",
     "    \n",
     "#names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
