--- a/index.ipynb
+++ b/index.ipynb
@@ -260,24 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "f-string: expecting '}' (<ipython-input-13-5450a0dd246a>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-14-bbce745bfc36>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-5450a0dd246a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(f\"{city_names[index]\")\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string: expecting '}'\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-bbce745bfc36>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(f\"{city_names[index]\"})\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "\n",
     "for index in city_indices: \n",
-    "    names_and_ranks.append(f\"{city_names[index]\")\n",
+    "    names_and_ranks.append(f\"{city_names[index]\"})\n",
     "    \n",
     "#names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
