Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,7 +268,7 @@
    "source": [
     "\n",
     "for index in city_indices: \n",
-    "    names_and_ranks.append(f\"{city_names[index]}\")\n",
+    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
     "    \n",
     "#names_and_ranks = ['change this to different elements'] # make sure the list is empty"
    ]
