Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n"
    ]
   },
   {
