Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n"
+    "city_populations = []\n",
+    "for"
    ]
   },
   {
