--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_population.append(cities())"
+    "    city_populations.append(city())"
    ]
   },
   {
