--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(city.values('Population'))"
+    "    city_populations.append(city[]'Population'))"
    ]
   },
   {
