--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,16 +315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "2800000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
    "source": [
     "city_populations[0] # 2891000\n",
     "city_populations[1] # 2800000\n",
-    "city_populations[-1] # 0"
+    "#city_populations[-1] # 0"
    ]
   },
   {
