Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,9 @@
    },
    "outputs": [],
    "source": [
-    "city_areas = []\n"
+    "city_areas = []\n",
+    "for city = in cities:\n",
+    "    cit"
    ]
   },
   {
