Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -508,7 +508,7 @@
    "source": [
     "city_areas = []\n",
     "for city = in cities:\n",
-    "    cit"
+    "    city_area_append(city)"
    ]
   },
   {
